[project]
name = "python-scripts"
version = "0.1.0"
description = "Test scripts"
authors = [
    {name = "PedroEgg",email = "pedro.eggg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "yt-dlp (>=2025.7.21,<2026.0.0)",
    "ruff (>=0.12.7,<0.13.0)",
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "cyberdrop-dl-patched (>=7.3.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false